--- a/SimpleTasksVerifier.Tests/SimpleTasksVerifier.Tests.csproj
+++ b/SimpleTasksVerifier.Tests/SimpleTasksVerifier.Tests.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="FileExistenceTests.cs" />
+    <Compile Include="FileOperationsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -58,6 +59,12 @@
       <Project>{d03da68e-fa7d-4b0c-b77f-f5c925e9ec70}</Project>
       <Name>SimpleTasksVerifier</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="SampleNotEmptyFile.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="SampleEmptyFile.txt" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
