--- a/SimpleTasksVerifier/SimpleTasksVerifier.csproj
+++ b/SimpleTasksVerifier/SimpleTasksVerifier.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileOperations\CustomFileReader.cs" />
     <Compile Include="Helpers\FileHelper.cs" />
     <Compile Include="Helpers\FileOperationsHelper.cs" />
     <Compile Include="Program.cs" />
