--- a/SimpleTasksVerifier/SimpleTasksVerifier.csproj
+++ b/SimpleTasksVerifier/SimpleTasksVerifier.csproj
@@ -52,6 +52,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>PowerShell.exe -ExecutionPolicy unrestricted -file "$(SolutionDir)PowerShell\CreateSampleFile.ps1"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
