--- a/SimpleTasksVerifier/SimpleTasksVerifier.csproj
+++ b/SimpleTasksVerifier/SimpleTasksVerifier.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Consts\Consts.cs" />
-    <Compile Include="FileOperations\CustomFileReader.cs" />
+    <Compile Include="FileOperations\CustomFileStreamReader.cs" />
     <Compile Include="Helpers\FileHelper.cs" />
     <Compile Include="Interfaces\IFileReader.cs" />
     <Compile Include="Program.cs" />
