--- a/SimpleTasksVerifier/SimpleTasksVerifier.csproj
+++ b/SimpleTasksVerifier/SimpleTasksVerifier.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Consts\Consts.cs" />
     <Compile Include="FileOperations\CustomFileStreamReader.cs" />
+    <Compile Include="FileOperations\SafeFileReader.cs" />
     <Compile Include="Helpers\FileHelper.cs" />
     <Compile Include="Interfaces\IFileReader.cs" />
     <Compile Include="Program.cs" />
