--- a/SimpleTasksVerifier.Tests/SimpleTasksVerifier.Tests.csproj
+++ b/SimpleTasksVerifier.Tests/SimpleTasksVerifier.Tests.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="FileExistenceTests.cs" />
     <Compile Include="FileOperationsTests.cs" />
+    <Compile Include="IntegrationTests\FileReaderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
