--- a/SimpleTasksVerifier/SimpleTasksVerifier.csproj
+++ b/SimpleTasksVerifier/SimpleTasksVerifier.csproj
@@ -47,8 +47,10 @@
     <Compile Include="FileOperations\CustomFileStreamReader.cs" />
     <Compile Include="FileOperations\SafeFileReader.cs" />
     <Compile Include="Helpers\FileHelper.cs" />
+    <Compile Include="Interfaces\IFileProcessor.cs" />
     <Compile Include="Interfaces\IFileReader.cs" />
     <Compile Include="Logic\ApplicationLogic.cs" />
+    <Compile Include="Logic\FileProcessor.cs" />
     <Compile Include="Models\TaskResult.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
